--- a/HelpDesk/appsettings.json
+++ b/HelpDesk/appsettings.json
@@ -1,12 +1,16 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=HelpDesk;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "FileSettings": {
+    "UploadsFolder": "C:\\Users\\miche\\Desktop\\DocumetUpload"
+
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
